# seekr-chain

./: .gitignore  .ruff.toml  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  REVIEW.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-controller-image.yml  build-init-image.yml  build-nix-runner-image.yml  ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
.hatchery/: Dockerfile.claude  docker.yaml
.hatchery/tasks/: 2026-03-27-template.md  2026-04-08-host-network.md  2026-04-08-kueue-support.md  2026-04-08-pod-affinities.md  2026-04-08-test-revamp.md  2026-04-20-local-execution.md  2026-04-21-cluster-secrets.md  2026-04-21-delete-cancel.md  2026-04-21-fix-release.md  2026-04-21-pure-jobsets.md  2026-04-27-exit-hammer.md  2026-04-27-fix-list.md  2026-04-29-consolidate-init-steps.md  2026-05-10-better-status.md  2026-06-16-safe-secret-cleanup.md  2026-06-25-nix-images.md  2026-07-01-better-status-refresh.md
dev/docker/: dockerfile
docker/: Dockerfile.controller  Dockerfile.init  Dockerfile.nix-runner  controller-requirements.txt
docs/: comparison.md  features.md  getting-started.md  index.md  installation.md  macros.py  roadmap.md
docs/developer/: CHANGELOG.md  FUTURE.md  contributing.md
docs/guides/: exit-handlers.md  interactive-jobs.md  multi-node-training.md  nix-mode.md  persistent-volumes.md  secrets.md
docs/reference/: cli.md  configuration.md  environment-variables.md
docs/scripts/: gen_api_pages.py  gen_config_page.py  gen_examples_page.py
examples/0_hello_world/: README.md  config.yaml
examples/10_nix_bandwidth_test/: README.md  config.yaml  flake.nix  job.py
examples/1_code_package/: README.md  config.yaml  job.py
examples/2_torchrun/: README.md  config.yaml  job.py
examples/3_torchrun_multinode/: README.md  config.yaml
examples/4_dag/: README.md  config.yaml  step_b.py
examples/5_multirole/: README.md  config.yaml  step_a.py  step_c.py
examples/6_nix_runtime/: README.md  config.yaml  flake.nix  job.py
examples/7_nix_rocm_smi/: README.md  config.yaml  flake.nix
examples/8_nix_torchrun/: README.md  config.yaml  flake.nix  job.py
examples/9_nix_torchrun_multinode/: README.md  config.yaml  flake.nix  job.py
scripts/: install-argo.sh
tests/: conftest.py  pytest.ini  utils.py
(+112 files in other folders)
