[project]
name = "seekr-chain"
dynamic = ['version']
description = "A no-nonsense job launcher for distributed workloads on Kubernetes"
readme = "README.md"
authors = [
    { name = "Logan Grado", email = "lgrado@seekr.com" }
]
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
]
keywords = ["kubernetes", "argo-workflows", "distributed-training", "job-launcher", "mlops"]
dependencies = [
    "boto3>=1.38.23",
    "click>=8.2.1",
    "jinja2>=3.1.0",
    "kubernetes>=32.0.1",
    "loggerado>=0.3.0",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/seekr-technologies/seekr-chain"
Documentation = "https://seekr-technologies.github.io/seekr-chain"
Repository = "https://github.com/seekr-technologies/seekr-chain"
Issues = "https://github.com/seekr-technologies/seekr-chain/issues"
Changelog = "https://github.com/seekr-technologies/seekr-chain/blob/main/docs/developer/CHANGELOG.md"

[project.scripts]
chain = "seekr_chain.cli:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seekr_chain"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }, # This ensures dynamic version stays in sync
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "ipdb>=0.13.13",
    "ipython>=8,<10",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.7.0",
    "pytest>=8.3.5",
    "ruff>=0.14.5",
    "semver>=3.0.4",
    {include-group = "docs"},
]
docs = [
    "mike>=2.1.3",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-awesome-nav>=3.3.0",
    "mkdocs-click>=0.9.0",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.6.21",
    "mkdocs-section-index>=0.3.10",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
]
